--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,7 @@ REDIS_CLIENT=phpredis
 REDIS_HOST=wrm-redis
 REDIS_PASSWORD=wrm_pass
 REDIS_PORT=6379
+
+JWT_SECRET=
+JWT_TTL=3600
+JWT_REFRESH_TTL=
