--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.4",
-        "laravel/framework": "^11.31"
+        "laravel/framework": "^11.31",
+        "ramsey/uuid": "^4.7",
+        "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -17,7 +19,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Archetecture\\": "archetecture/",
+            "Architecture\\": "architecture/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
