--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.4",
         "laravel/framework": "^11.31",
+        "openai-php/laravel": "^0.10.2",
         "ramsey/uuid": "^4.7",
         "tymon/jwt-auth": "^2.1"
     },
